--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 adhd_technical_deepdive.md
+datasets/README.md
 
+AI_Integration.md
+TYPING_SENSOR.md
+URGENT_FIX.md
+IDLE_TRACKING.md
+OFFSCREEN_AI.md
+BACKGROUND_UPDATE.md
+QUICKFIX.md
