--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
   ],
   "action": {
@@ -31,6 +35,7 @@
       "128": "icons/icon128.png"
     }
   },
+  "options_page": "home.html",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
